# CG_CrewAI_Demo

./: README.md  pyproject.toml
src/email_analyzer/: crew.py  main.py
src/email_analyzer/config/: agents.yaml  tasks.yaml
src/email_analyzer/tools/: custom_tool.py
