[project]
name = "email_analyzer"
version = "0.1.0"
description = "email_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.97.0",
    "black>=26.3.1",
    "crewai[tools]==1.14.4",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "litellm>=1.83.0",
    "mcp>=1.26.0",
    "reportlab>=4.5.0",
]

[project.scripts]
email_analyzer = "email_analyzer.main:run"
run_crew = "email_analyzer.main:run"
train = "email_analyzer.main:train"
replay = "email_analyzer.main:replay"
test = "email_analyzer.main:test"
run_with_trigger = "email_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
